panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__test_error_arity_mismatch_in_function_call.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/test_error_arity_mismatch_in_function_call.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/test_error_arity_mismatch_in_function_call.c"
   (function-definition
      zero_params~0 `fn() -> void`
      (compound-statement))
   (function-definition
      one_param~2 `fn(∅: int) -> void`
      (params
         one_param.unnamed_parameter.0~4 `int`)
      (compound-statement))
   (function-definition
      two_params~5 `fn(∅: int, ∅: int) -> void`
      (params
         two_params.unnamed_parameter.0~7 `int`
         two_params.unnamed_parameter.1~8 `int`)
      (compound-statement))
   (function-definition
      returns_function_pointer~9 `fn() -> ptr<fn(∅: int, ∅: int) -> void>`
      (compound-statement
         (return (name two_params~5 `fn(∅: int, ∅: int) -> void`))))
   (function-definition
      varargs~11 `fn(∅: int, ∅: int, ...) -> void`
      (params
         varargs.unnamed_parameter.0~14 `int`
         varargs.unnamed_parameter.1~15 `int`)
      (compound-statement))
   (function-definition
      main~16 `fn() -> int`
      (compound-statement
         (expression
            (call (name zero_params~0 `fn() -> void`)
               1))
         (expression (call (name one_param~2 `fn(∅: int) -> void`)))
         (expression
            (call (name two_params~5 `fn(∅: int, ∅: int) -> void`)
               42))
         (expression (call (call (name returns_function_pointer~9 `fn() -> ptr<fn(∅: int, ∅: int) -> void>`))))
         (expression
            (call (name varargs~11 `fn(∅: int, ∅: int, ...) -> void`)
               42)))))

----- stderr -----
