panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__test_error_array_redeclaration_with_incompatible_length.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/test_error_array_redeclaration_with_incompatible_length.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/test_error_array_redeclaration_with_incompatible_length.c"
   (declaration xs~0 `array<int; ∅>` ∅)
   (declaration xs~0 `array<int; 1>` ∅)
   (declaration xs~0 `array<int; 2>` ∅)
   (declaration ys~3 `array<int; 1>` ∅)
   (declaration ys~3 `array<int; ∅>` ∅)
   (declaration ys~3 `array<int; 2>` ∅)
   (declaration zs~6 `array<int; 1>` ∅)
   (declaration zs~6 `array<int; 2>` ∅)
   (declaration zs~6 `array<int; ∅>` ∅))

----- stderr -----
