panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__test_error_incompatible_pointer_types_in_conditional.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/test_error_incompatible_pointer_types_in_conditional.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/test_error_incompatible_pointer_types_in_conditional.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration p~2 `ptr<int const>` ∅)
         (declaration c~3 `ptr<char const>` ∅)
         (expression
            (conditional
               1
               (name p~2 `ptr<int const>`)
               (name c~3 `ptr<char const>`))))))

----- stderr -----
