panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__test_error_integer_literal_too_large.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/test_error_integer_literal_too_large.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/test_error_integer_literal_too_large.c"
   (function-definition
      main~0 `fn(∅: int, argv: ptr<ptr<char>>) -> int`
      (params
         main.unnamed_parameter.0~2 `int`
         argv~3 `ptr<ptr<char>>`)
      (compound-statement
         (expression 0xffff'ffff'ffff'ffff)
         (expression 0x1'0000'0000'0000'0000))))

----- stderr -----
