panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__test_error_invalid_first_operand_for_conditional_operator.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/test_error_invalid_first_operand_for_conditional_operator.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/test_error_invalid_first_operand_for_conditional_operator.c"
   (declaration f~0 `fn() -> void` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (expression
            (conditional
               (call (name f~0 `fn() -> void`))
               0
               1)))))

----- stderr -----
