panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__test_error_invalid_generic_selection.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/test_error_invalid_generic_selection.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/test_error_invalid_generic_selection.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration a~2 `int` 42)
         (declaration b~3 `int` 27)
         (declaration p~4 `ptr<int const> const` (addressof (name b~3 `int`)))
         (expression
            (assign
               (generic
                  (name main~0 `fn() -> int`)
                  (assoc `int` (name a~2 `int`))
                  (assoc default 27)
                  (assoc `int` (name a~2 `int`))
                  (assoc `ptr<int const>` (name b~3 `int`))
                  (assoc default 42))
               123))
         (expression
            (generic
               (addressof (name a~2 `int`))
               (assoc `int` 42)
               (assoc `long` 27)))
         (expression
            (generic
               42
               (assoc `fn() -> int` 1)
               (assoc `void` 2)
               (assoc default 3)))
         (expression
            (generic
               42
               (assoc `struct IncompleteStruct~5` 0)
               (assoc `enum IncompleteEnum~6` 1)
               (assoc default 2)))
         (return (name a~2 `int`)))))

----- stderr -----
