panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__test_error_invalid_implicit_conversion.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/test_error_invalid_implicit_conversion.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/test_error_invalid_implicit_conversion.c"
   (function-definition
      a~0 `fn() -> int`
      (compound-statement
         (declaration p~2 `ptr<int>` 0)
         (return (name p~2 `ptr<int>`))))
   (function-definition
      b~3 `fn() -> int`
      (compound-statement
         (declaration p~5 `ptr<char const>` 0)
         (return (name p~5 `ptr<char const>`))))
   (function-definition
      c~6 `fn() -> ptr<int>`
      (compound-statement
         (declaration x~8 `int` 42)
         (return (name x~8 `int`))))
   (function-definition
      d~9 `fn() -> ptr<char const>`
      (compound-statement
         (declaration x~11 `int` 42)
         (return (name x~11 `int`)))))

----- stderr -----
