panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__test_error_invalid_lengthof_of_array_of_unknown_size.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/test_error_invalid_lengthof_of_array_of_unknown_size.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/test_error_invalid_lengthof_of_array_of_unknown_size.c"
   (declaration xs~0 `array<int; ∅>` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (expression (lengthof (name xs~0 `array<int; ∅>`)))
         (expression (lengthof `array<int; ∅>`)))))

----- stderr -----
