panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__test_error_invalid_operand_for_binary_operator.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/test_error_invalid_operand_for_binary_operator.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/test_error_invalid_operand_for_binary_operator.c"
   (function-definition
      f~0 `fn() -> void`
      (compound-statement))
   (function-definition
      main~2 `fn() -> int`
      (compound-statement
         (expression (add (call (name f~0 `fn() -> void`)) 42))
         (declaration x~4 `int` 42)
         (declaration c~5 `char` ∅)
         (expression (equal (addressof (name x~4 `int`)) (addressof (name c~5 `char`))))
         (expression (add (addressof (name x~4 `int`)) (addressof (name x~4 `int`)))))))

----- stderr -----
